--- a/index.html
+++ b/index.html
@@ -164,45 +164,6 @@
         </div>
     </div>
 
-    <div class="container mt-5">
-        <h2 class="text-center mb-4" style="color: var(--primary-color);">Our Services</h2>
-        <div class="row">
-            <div class="col-md-4 service-card">
-                <div class="service-inner">
-                    <div class="service-front">
-                        <h5>University Application</h5>
-                        <p>We guide students through applications to top international universities.</p>
-                    </div>
-                    <div class="service-back">
-                        <p>Includes documentation review, application writing, visa support & interview coaching.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 service-card">
-                <div class="service-inner">
-                    <div class="service-front">
-                        <h5>Scholarship Advisory</h5>
-                        <p>Find and apply for available scholarships tailored to your goals.</p>
-                    </div>
-                    <div class="service-back">
-                        <p>We assess eligibility, prepare you for success, and help with all paperwork.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 service-card">
-                <div class="service-inner">
-                    <div class="service-front">
-                        <h5>Virtual Consultations</h5>
-                        <p>Book sessions with our advisors to plan your academic journey.</p>
-                    </div>
-                    <div class="service-back">
-                        <p>One-on-one sessions to explore university programs and career paths.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Our about Section -->
     <div class="untree_co-section">
         <div class="container">
@@ -293,6 +254,86 @@
         </div>
     </div>
 
+
+    <div class="container mt-5">
+        <h2 class="text-center mb-4" style="color: var(--primary-color);">Our Services</h2>
+        <div class="row">
+            <div class="col-md-4 service-card">
+                <div class="service-inner">
+                    <div class="service-front">
+                        <h5>University Application</h5>
+                        <p>We guide students through applications to top international universities.</p>
+                    </div>
+                    <div class="service-back">
+                        <p>Includes documentation review, application writing, visa support & interview coaching.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 service-card">
+                <div class="service-inner">
+                    <div class="service-front">
+                        <h5>Scholarship Advisory</h5>
+                        <p>Find and apply for available scholarships tailored to your goals.</p>
+                    </div>
+                    <div class="service-back">
+                        <p>We assess eligibility, prepare you for success, and help with all paperwork.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 service-card">
+                <div class="service-inner">
+                    <div class="service-front">
+                        <h5>Virtual Consultations</h5>
+                        <p>Book sessions with our advisors to plan your academic journey.</p>
+                    </div>
+                    <div class="service-back">
+                        <p>One-on-one sessions to explore university programs and career paths.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+    <div class="container mt-5">
+        <h2 class="text-center mb-4" style="color: var(--primary-color);">Our Services</h2>
+        <div class="row">
+            <div class="col-md-4 service-card">
+                <div class="service-inner">
+                    <div class="service-front">
+                        <h5>University Application</h5>
+                        <p>We guide students through applications to top international universities.</p>
+                    </div>
+                    <div class="service-back">
+                        <p>Includes documentation review, application writing, visa support & interview coaching.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 service-card">
+                <div class="service-inner">
+                    <div class="service-front">
+                        <h5>Scholarship Advisory</h5>
+                        <p>Find and apply for available scholarships tailored to your goals.</p>
+                    </div>
+                    <div class="service-back">
+                        <p>We assess eligibility, prepare you for success, and help with all paperwork.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 service-card">
+                <div class="service-inner">
+                    <div class="service-front">
+                        <h5>Virtual Consultations</h5>
+                        <p>Book sessions with our advisors to plan your academic journey.</p>
+                    </div>
+                    <div class="service-back">
+                        <p>One-on-one sessions to explore university programs and career paths.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Course Grid Section -->
     <div id="course-grid" class="row">
         <!-- Course Grid Items will be populated dynamically -->
@@ -304,6 +345,48 @@
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur nisi
                         et libero scelerisque, vel pulvinar neque semper.</p>
                     <a href="#" class="btn btn-primary">Learn More</a>
+                    <div class="course-footer">
+                        <span class="badge bg-primary">Top University</span>
+                        <span class="badge bg-success">Recognized Course</span>
+                        <span class="badge bg-warning">International Program</span>
+                        <span class="badge bg-danger">Best Value Program</span>
+                        <span class="badge bg-info">Academic Success</span>
+                        <span class="badge bg-dark">International Cooperation</span>
+                        <span class="badge bg-light">Affordable & Flexible</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4 course-item" data-aos="fade-up" data-aos-delay="100">
+            <div class="card h-100">
+                <img src="assets/imgs/course2.jpg" class="card-img-top" alt="Course 2">
+                <div class="card-body">
+                    <h5 class="card-title">Master of Business Administration (MBA)</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur nisi et
+                        libero scelerisque, vel pulvinar neque semper.</p>
+                    <a href="#" class="btn btn-primary">Learn More</a>
+                    <div class="course-footer">
+                        <span class="badge bg-primary">Partner & Collaboration</span>
+                        <span class="badge bg-success">Top University</span>
+                        <span class="badge bg-warning">International Program</span>
+                        <span class="badge bg-danger">Best Value Program</span>
+                        <span class="badge bg-info">Academic Success</span>
+                        <span class="badge bg-dark">International Cooperation</span>
+                        <span class="badge bg-light">Affordable & Flexible</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4 course-item" data-aos="fade-up" data-aos-delay="200">
+            <div class="card h-100">
+                <img src="assets/imgs/course3.jpg" class="card-img-top" alt="Course 3">
+                <div class="card-body">
+                    <h5 class="card-title">Diploma in Graphic Design</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur nisi et
+                        libero scelerisque, vel pulvinar neque semper.</p>
+                        <a href="#" class="btn btn-primary">Learn More</a>
                     <div class="course-footer">
                         <span class="badge bg-primary">Top University</span>
                         <span class="badge bg-success">Recognized Course</span>
