--- a/index.html
+++ b/index.html
@@ -342,8 +342,11 @@
                 <img src="assets/imgs/course1.jpg" class="card-img-top" alt="Course 1">
                 <div class="card-body">
                     <h5 class="card-title">Bachelor of Science in Computer Science</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur nisi
-                        et libero scelerisque, vel pulvinar neque semper.</p>
+                    <p class="card-text">50% scholarship 
+                        <br>
+                        Enroll in our Computer Science program to learn valuable skills and gain a job-ready career.
+                        <br>
+                    </p>
                     <a href="#" class="btn btn-primary">Learn More</a>
                     <div class="course-footer">
                         <span class="badge bg-primary">Top University</span>
@@ -363,8 +366,10 @@
                 <img src="assets/imgs/course2.jpg" class="card-img-top" alt="Course 2">
                 <div class="card-body">
                     <h5 class="card-title">Master of Business Administration (MBA)</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur nisi et
-                        libero scelerisque, vel pulvinar neque semper.</p>
+                    <p class="card-text">
+                        Enroll in our MBA program to gain advanced business skills and leadership training.
+
+                    </p>
                     <a href="#" class="btn btn-primary">Learn More</a>
                     <div class="course-footer">
                         <span class="badge bg-primary">Partner & Collaboration</span>
