--- a/contact.html
+++ b/contact.html
@@ -307,17 +307,19 @@
             <!--- Map Section--->
             <div class="row justify-content-center">
                 <div class="col-md-6">
+                    <h2 class="mb-4">Find Us Here</h2>
+                    <p class="mb-4">We are located in the heart of Lilongwe, Malawi. Visit us for personalized guidance and support.</p>
+                    <div class="map-responsive">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.1234567890123!2d34.123456789012345!3d-13.123456789012345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x123456789abcdefg!2sMtendere%20Education%20Consult%20-%20Study%20Abroad%20Malawi!5e0!3m2!1sen!2smw!4v1234567890123" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>  
+                    <p class="text-center mt-4">
+                        <a href="#" class="btn btn-primary btn-sm">
+                            <i class="icon-location-arrow mr-2"></i> Get Directions
+                        </a>
+                    </p>
+                    
                     <div id="untree_map">
                         <div id="untree_map_canvas">
-                            <div id="untree_map_info">
-                                <h4 class="text-white">Location</h4>
-                                <p class="text-white">
-                                    Babaje House, Off Mandala Road,<br>
-                                    Area 3, Behind NBS,<br>
-                                    1st Floor Room 1,<br>
-                                    Lilongwe, Malawi
-                                </p>
-                            </div>
                             <div id="untree_map_controls">
                                 <button class="btn btn-primary btn-sm" id="untree_map_zoom_in">
                                     <i class="icon-plus"></i>
