--- a/gallery.html
+++ b/gallery.html
@@ -361,11 +361,11 @@
 
 
     <!-- Video Gallery Start -->
-    <div class="container-fluid gallery py-5" style="background-color: #f4f6f9;">
+    <div class="container-fluid gallery py-5">
         <div class="container py-5">
             <div class="pb-5">
                 <!-- Section Title -->
-                <h4 class="text-primary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Explore the Journey</h4>
+                <h6 class="text-primary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Explore the Journey</h6>
                 <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Student Success Stories</h1>
             </div>
 
@@ -402,7 +402,7 @@
                 <!-- Tab Content -->
                 <div class="tab-content">
                     <!-- All Videos Tab -->
-                    <div id="GalleryTab-1" class="tab-pane fade show p-0 active">
+                    <div id="GalleryTab-1" class="tab-pane fade show p-0">
                         <div class="row g-2">
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="col-md-6 col-lg-4 item">
@@ -439,7 +439,7 @@
                     </div>
 
                     <!-- Best Practices Tab -->
-                    <div id="GalleryTab-2" class="tab-pane fade show p-0 active">
+                    <div id="GalleryTab-2" class="tab-pane fade show p-0">
                         <div class="row g-2">
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="col-md-6 col-lg-4 item">
@@ -476,7 +476,7 @@
                     </div>
 
                     <!-- Golden Careers Tab -->
-                    <div id="GalleryTab-3" class="tab-pane fade show p-0 active">
+                    <div id="GalleryTab-3" class="tab-pane fade show p-0">
                         <div class="row g-2">
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="col-md-6 col-lg-4 item">
@@ -513,7 +513,7 @@
                     </div>
 
                     <!-- Admission & Enrollment Tab -->
-                    <div id="GalleryTab-4" class="tab-pane fade show p-0 active">
+                    <div id="GalleryTab-4" class="tab-pane fade show p-0">
                         <div class="row g-2">
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="col-md-6 col-lg-4 item">
@@ -550,7 +550,7 @@
                     </div>
 
                     <!-- Lifestyle Improvement Tab -->
-                    <div id="GalleryTab-5" class="tab-pane fade show p-0 active">
+                    <div id="GalleryTab-5" class="tab-pane fade show p-0">
                         <div class="row g-2">
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="col-md-6 col-lg-4 item">
@@ -590,50 +590,6 @@
         </div>
     </div>
     <!-- Video Gallery End -->
-
-    <!-- Blog Section Start -->
-    <div class="untree_co-section bg-light py-12">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 text-center mx-auto">
-                    <h3 class="line-bottom mb-4 text-blue-700">Latest News & Articles</h3>
-                    <p class="lead">Stay updated with the latest news and articles from Mtendere Education Consult.</p>
-                    <a href="blog.html" class="btn btn-primary mt-4">View All News</a>
-                    <div class="owl-carousel wide-slider-blog">
-                        <!-- Blog Post 1 -->
-                        <div class="item">
-                            <div class="blog-post">
-                                <img src="assets/imgs/2020mBatch Departure day.jpg" alt="Blog Post 1" class="img-fluid">
-                                <h4 class="mt-3"><a href="#">How to Secure Scholarships for International Studies</a>
-                                </h4>
-                                <p>Learn the best strategies to secure scholarships for your international studies.</p>
-                            </div>
-                        </div>
-
-                        <!-- Blog Post 2 -->
-                        <div class="item">
-                            <div class="blog-post">
-                                <img src="assets/imgs/Abroad students Malawi flag.jpg" alt="Blog Post 2"
-                                    class="img-fluid">
-                                <h4 class="mt-3"><a href="#">Top Universities for International Students</a></h4>
-                                <p>Discover the top universities that welcome international students with open arms.</p>
-                            </div>
-                        </div>
-
-                        <!-- Blog Post 3 -->
-                        <div class="item">
-                            <div class="blog-post">
-                                <img src="assets/imgs/doctors pose.jpg" alt="Blog Post 3" class="img-fluid">
-                                <h4 class="mt-3"><a href="#">Tips for Successful University Applications</a></h4>
-                                <p>Get tips and tricks for making your university application stand out.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Blog Section End -->
 
     <!-- UNIVERSITY STATS & ACCREDITATIONS -->
     <section id="stats-accreditations" class="py-5 bg-white border-top">
