--- a/course.html
+++ b/course.html
@@ -273,8 +273,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div> <!-- /.container -->
     </div> <!-- /.untree_co-section -->
 
@@ -321,86 +319,6 @@
 
         </div>
     </div>
-
-    <!-- Categories Start -->
-    <div class="container py-5">
-        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-primary px-3 d-inline-block">Explore Learning Paths</h6>
-            <h1 class="mb-3">Mtendere Academic Categories</h1>
-            <p class="text-muted">Filter your journey. Learn what aligns with your passion and career goals.</p>
-        </div>
-
-        <!-- Filter Buttons -->
-        <div class="text-center mb-4">
-            <button class="btn btn-outline-primary m-1 filter-btn active" data-filter="all">All</button>
-            <button class="btn btn-outline-primary m-1 filter-btn" data-filter="technology">Technology</button>
-            <button class="btn btn-outline-primary m-1 filter-btn" data-filter="creative">Creative</button>
-            <button class="btn btn-outline-primary m-1 filter-btn" data-filter="marketing">Marketing</button>
-            <button class="btn btn-outline-primary m-1 filter-btn" data-filter="careers">Careers</button>
-        </div>
-
-        <!-- Categories Grid -->
-        <div class="row g-4 justify-content-center" id="category-grid">
-
-            <!-- Card: Technology -->
-            <div class="col-lg-4 col-md-6 category-card" data-category="technology">
-                <a href="#" class="card-hover d-block position-relative overflow-hidden shadow-sm rounded">
-                    <img class="img-fluid rounded" src="img/cat-1.jpg" alt="Technology">
-                    <div class="category-info">
-                        <h5>Technology & Innovation</h5>
-                        <small class="text-primary">32 Courses</small>
-                    </div>
-                </a>
-            </div>
-
-            <!-- Card: Creative -->
-            <div class="col-lg-4 col-md-6 category-card" data-category="creative">
-                <a href="#" class="card-hover d-block position-relative overflow-hidden shadow-sm rounded">
-                    <img class="img-fluid rounded" src="img/cat-2.jpg" alt="Creative Design">
-                    <div class="category-info">
-                        <h5>Creative Media & Design</h5>
-                        <small class="text-primary">24 Courses</small>
-                    </div>
-                </a>
-            </div>
-
-            <!-- Card: Creative -->
-            <div class="col-lg-4 col-md-6 category-card" data-category="creative">
-                <a href="#" class="card-hover d-block position-relative overflow-hidden shadow-sm rounded">
-                    <img class="img-fluid rounded" src="img/cat-3.jpg" alt="Video">
-                    <div class="category-info">
-                        <h5>Video Editing & Storytelling</h5>
-                        <small class="text-primary">18 Courses</small>
-                    </div>
-                </a>
-            </div>
-
-            <!-- Card: Marketing -->
-            <div class="col-lg-6 col-md-12 category-card" data-category="marketing">
-                <a href="#" class="card-hover d-block position-relative overflow-hidden shadow-sm rounded">
-                    <img class="img-fluid w-100 h-100" src="img/cat-4.jpg" style="object-fit: cover;" alt="Marketing">
-                    <div class="category-info">
-                        <h5>Digital Business & Marketing</h5>
-                        <small class="text-primary">40 Courses</small>
-                    </div>
-                </a>
-            </div>
-
-            <!-- Card: Careers -->
-            <div class="col-lg-6 col-md-12 category-card" data-category="careers">
-                <a href="#" class="card-hover d-block position-relative overflow-hidden shadow-sm rounded">
-                    <img class="img-fluid w-100 h-100" src="img/cat-5.jpg" style="object-fit: cover;" alt="Careers">
-                    <div class="category-info">
-                        <h5>Career Development & Global Skills</h5>
-                        <small class="text-primary">37 Courses</small>
-                    </div>
-                </a>
-            </div>
-
-        </div>
-    </div>
-    <!-- Categories End -->
-
 
     <!-- Courses Start -->
     <div class="container">
@@ -547,6 +465,95 @@
             </table>
         </div>
     </section>
+
+    
+    <div class="untree_co-section bg-light">
+        <div class="container">
+            <div class="row justify-content-center mb-5">
+                <div class="col-lg-8 text-center" data-aos="fade-up">
+                    <h2 class="line-bottom text-center mb-4">Scholarship Opportunities Tailored for You</h2>
+                    <p>Explore top international programs with guaranteed tuition discounts, partial to full
+                        scholarships, and flexible entry pathways. Mtendere Education Consult partners with globally
+                        accredited universities to help you study smarter, not harder.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <!-- Program 1 -->
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                    <div class="custom-media border rounded bg-white shadow-sm p-3">
+                        <a href="#"><img src="images/medical-scholarship.jpg" alt="Medical Program"
+                                class="img-fluid rounded mb-3"></a>
+                        <div class="custom-media-body">
+                            <div class="d-flex justify-content-between pb-2">
+                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>5-Year
+                                        MBBS</span></div>
+                                <div class="review"><span class="icon-star text-warning"></span> <span>4.9</span></div>
+                            </div>
+                            <h4 class="font-weight-bold">MBBS – Full & Partial Scholarships</h4>
+                            <p>Study Medicine in India, Russia, or Turkey. Scholarships cover up to 70% of tuition.
+                                Partnered with top medical universities with global licensure support.</p>
+                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
+                                <div><span class="price text-success">From $1,200/year</span></div>
+                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
+                                    data-toggle="modal">Enroll now
+                                </a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Program 2 -->
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                    <div class="custom-media border rounded bg-white shadow-sm p-3">
+                        <a href="#"><img src="images/engineering-scholarship.jpg" alt="Engineering Program"
+                                class="img-fluid rounded mb-3"></a>
+                        <div class="custom-media-body">
+                            <div class="d-flex justify-content-between pb-2">
+                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>4-Year
+                                        BEng</span></div>
+                                <div class="review"><span class="icon-star text-warning"></span> <span>4.7</span></div>
+                            </div>
+                            <h4 class="font-weight-bold">Engineering Degrees – 50% Merit Scholarships</h4>
+                            <p>Join tech-focused campuses in Malaysia, UAE, or Poland. Scholarships based on academic
+                                excellence & motivation letters. Strong internship support.</p>
+                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
+                                <div><span class="price text-success">From $980/year</span></div>
+                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
+                                    data-toggle="modal">Enroll now
+                                </a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Program 3 -->
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                    <div class="custom-media border rounded bg-white shadow-sm p-3">
+                        <a href="#"><img src="images/business-scholarship.jpg" alt="Business Program"
+                                class="img-fluid rounded mb-3"></a>
+                        <div class="custom-media-body">
+                            <div class="d-flex justify-content-between pb-2">
+                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>3-Year
+                                        BBA</span></div>
+                                <div class="review"><span class="icon-star text-warning"></span> <span>4.8</span></div>
+                            </div>
+                            <h4 class="font-weight-bold">Business & Management – Guaranteed Entry + Support</h4>
+                            <p>Affordable degrees in Canada & UK with pathway programs and 40% fee reductions. English
+                                support, visa training, and financial planning included.</p>
+                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
+                                <div><span class="price text-success">From $1,500/year</span></div>
+                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
+                                    data-toggle="modal">Enroll now
+                                </a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <!-- CATALOG TABLE SECTION -->
     <section id="catalog" class="container my-5">
