--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             (No 12 of 2012)</strong>, with a strong passion for education and a mission to connect
                         aspiring students with prestigious international universities and colleges.
                     </p>
-                    <div class="row">
+                    <div class="d-flex mb-3" data-aos="fade-up" data-aos-delay="200">
                         <div class="col-lg-6" data-aos="fade-left">
                             <div class="ps-lg-4">
                                 <h3 class="mb-3">Our Vision & Commitment</h3>
@@ -442,7 +442,6 @@
         </div>
     </div>
 
-    
     <div class="untree_co-section bg-light">
         <div class="container">
             <div class="row justify-content-center mb-5">
@@ -651,38 +650,6 @@
         </div>
     </div>
     <!-- /.untree_co-section -->
-
-    <!-- Feature Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="row">
-                <div class="col-lg-7 mb-5 mb-lg-0">
-                    <div class="section-title position-relative mb-4">
-                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Why Choose Us?
-                        </h6>
-                        <h1 class="display-4">Why Study Abroad with Us?</h1>
-                    </div>
-                    <p class="mb-4 pb-2">
-                        We believe that education is not just about acquiring knowledge; it's also about developing the
-                        skills
-                        and values that will help students succeed in life. Our mission is to provide students with the
-                        best possible education and support to help them achieve their dreams.
-                    </p>
-                    <p class="mb-4 pb-2">
-                        Our programs offer a wide range of programs to suit the diverse needs and interests of our
-                        students. Whether you're looking for undergraduate, postgraduate, or vocational courses, we have
-                        something for everyone.
-                    </p>
-                    <div class="col-lg-5" style="min-height: 500px;">
-                        <div class="position-relative h-100">
-                            <img class="position-absolute w-100 h-100" src="assets/imgs/about us 2.jpg"
-                                style="object-fit: cover;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Testimonial Video Carousel -->
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
