--- a/index.html
+++ b/index.html
@@ -671,10 +671,9 @@
     <section id="success-section" class="success py-5 bg-light">
         <div class="container py-5">
             <div class="section-header text-center mb-5">
-                <h4 class="text-primary fw-bold">Our Success Story's</h4>
-                <h1 class="display-5"><span class="text-primary">Some of our satisfied students</span> have grown into
-                    successful
-                    professionals, and our success stories inspire others to follow their dreams.
+                <h6 class="text-primary fw-bold">Success Story's</h6>
+                <h1 class="display-5"><span class="text-primary">
+                   <span>Inspiring Journeys of Our Students</span></h1>
                 </h1>
                 <p class="lead">
                     Transforming Lives Through Education
