--- a/index.html
+++ b/index.html
@@ -175,27 +175,11 @@
                             (No 12 of 2012)</strong>, with a strong passion for education and a mission to connect
                         aspiring students with prestigious international universities and colleges.
                     </p>
-                    <div class="d-flex mb-3" data-aos="fade-up" data-aos-delay="200">
-                        <div class="col-lg-6" data-aos="fade-left">
-                            <div class="ps-lg-4">
-                                <h3 class="mb-3">Our Vision & Commitment</h3>
-                                <p>At Mtendere Education Consult, we understand the life-changing power of education.</p>
-                                <ul class="list-unstyled mt-4">
-                                    <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Strong
-                                        partnerships with top global universities and colleges</li>
-                                    <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Expert advice
-                                        from experienced professionals in international education</li>
-                                    <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Commitment to
-                                        integrity, transparency, and professionalism</li>
-                                    <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Clear and
-                                        up-to-date information for students and families</li>
-                                </ul>
-                                <p class="mt-4">We prioritize our students' goals and challenges, especially those faced
-                                    by international applicants.</p>
-                                <a href="#apply" class="btn btn-primary mt-3">Apply Now</a>
-                            </div>
-                        </div>
-                    </div>
+                    <p data-aos="fade-up" data-aos-delay="200">
+                        Our team of experienced advisors is dedicated to providing personalized support, helping you
+                        navigate the complexities of studying abroad. We offer a wide range of services, including
+                        university application assistance, scholarship advisory, and visa support.
+                    </p>
 
                     <p data-aos="fade-up" data-aos-delay="200">
                         <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4" data-toggle="modal">Enroll now
@@ -208,8 +192,31 @@
                         <img src="assets/imgs/about us 2.jpg" alt="Image" class="img-fluid rounded">
                     </a>
                 </div>
+
+                <div class="d-flex mb-3" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-lg-6" data-aos="fade-left">
+                        <div class="ps-lg-4">
+                            <h3 class="mb-3">Our Vision & Commitment</h3>
+                            <p>At Mtendere Education Consult, we understand the life-changing power of education.</p>
+                            <ul class="list-unstyled mt-4">
+                                <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Strong
+                                    partnerships with top global universities and colleges</li>
+                                <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Expert advice
+                                    from experienced professionals in international education</li>
+                                <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Commitment to
+                                    integrity, transparency, and professionalism</li>
+                                <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Clear and
+                                    up-to-date information for students and families</li>
+                            </ul>
+                            <p class="mt-4">We prioritize our students' goals and challenges, especially those faced
+                                by international applicants.</p>
+                            <a href="#apply" class="btn btn-primary mt-3">Apply Now</a>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="d-flex mb-3">
-                    <div class="btn-icon bg-primary mr-4">
+                    <div class="btn-icon bg-primary">
                         <i class="fa fa-graduation-cap text-white"></i>
                     </div>
                     <div class="mt-n1">
@@ -224,7 +231,7 @@
                     </div>
                 </div>
                 <div class="d-flex mb-3">
-                    <div class="btn-icon bg-secondary mr-4">
+                    <div class="btn-icon bg-secondary">
                         <i class="fa fa-certificate text-white"></i>
                     </div>
                     <div class="mt-n1">
@@ -239,7 +246,7 @@
                     </div>
                 </div>
                 <div class="d-flex">
-                    <div class="btn-icon bg-warning mr-4">
+                    <div class="btn-icon bg-warning">
                         <i class="fa fa-book-reader text-white"></i>
                     </div>
                     <div class="mt-n1">
