--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 
     <title>Mtendere Education Consult - Study Abroad Malawi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description"
-        content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
-    <meta name="keywords"
-        content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
+    <meta name="description" content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
+    <meta name="keywords" content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
     <meta name="author" content="Mtendere Education Consult">
 
     <!-- Bootstrap 5 & Custom Styles -->
@@ -18,8 +16,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"
-        rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/animate.min.css">
@@ -34,6 +31,7 @@
     <link rel="stylesheet" href="assets/scss/_site-blocks.scss">
     <link rel="stylesheet" href="assets/scss/_variables.scss">
 
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/unicons.css"/>
 </head>
 
 <body>
