--- a/index.html
+++ b/index.html
@@ -450,8 +450,7 @@
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-8 text-center" data-aos="fade-up">
                     <h2 class="line-bottom text-center mb-4">Scholarship Opportunities Tailored for You</h2>
-                    <p>Explore top international programs with guaranteed tuition discounts, partial to full
-                        scholarships, and flexible entry pathways. Mtendere Education Consult partners with globally
+                    <p>Mtendere Education Consult partners with globally
                         accredited universities to help you study smarter, not harder.</p>
                 </div>
             </div>
