--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="container">
                     <h1 class="display-4 fw-bold bg-dark p-3 rounded">Empowering Dreams. Building Global
                         Futures.</h1>
-                    <p class="lead mb-4 bg-dark bg-opacity-25 p-2 rounded">Connecting Malawian students with top
+                    <p class="lead mb-4 bg-dark p-2 rounded">Connecting Malawian students with top
                         international universities through expert guidance and personalized support.</p>
                     <button class="btn btn-primary open-modal">Apply Now</button>
                     <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#videoModal">▶ Watch
@@ -129,11 +129,10 @@
             </div>
 
             <!-- Slide 2 -->
-            <div class="hero-slide align-items-center justify-content-center text-center"
-                style="height: 80vh; background: url('img/study-group-african-people.jpg') center center/cover no-repeat;">
+            <div class="hero-slide align-items-center justify-content-center text-center" style="height: 80vh; background: url('img/study-group-african-people.jpg') center center/cover no-repeat;">
                 <div class="container">
                     <h1 class="display-5 fw-bold bg-dark p-3 rounded">Scholarships & Visa Support</h1>
-                    <p class="lead mb-4 bg-dark bg-opacity-25 p-2 rounded">From choosing the right program to securing
+                    <p class="lead mb-4 bg-dark p-2 rounded">From choosing the right program to securing
                         funding, Mtendere Education Consult is with you every step of the way.</p>
                     <a href="#services" class="btn btn-primary">Explore Services</a>
                 </div>
